<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        style="@style/TextView.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/mont_semibold"/>

    <TextView
        style="@style/TextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_rp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/mont_regular"/>

    <EditText
        android:id="@+id/edt_email_rp"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="24dp"
        android:imeOptions="actionNext"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_send_rp"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_cancel_rp"
        style="@style/Button.Outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>
</LinearLayout>