<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WilayahTest"
    android:padding="16dp"
    android:id="@+id/wilayah_test"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/cb_provinces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Provinsi"/>

    <Spinner
        android:id="@+id/spin_provinces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:prompt="@string/hint_select_province"
        android:spinnerMode="dialog" />

    <CheckBox
        android:id="@+id/cb_regencies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kabupaten"/>

    <Spinner
        android:id="@+id/spin_regencies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:prompt="@string/hint_select_regency"
        android:spinnerMode="dialog"/>

    <CheckBox
        android:id="@+id/cb_districts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kecamatan"/>

    <Spinner
        android:id="@+id/spin_districts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:prompt="@string/hint_select_district"
        android:spinnerMode="dialog"/>
</LinearLayout>